--- a/_posts/2018-04-08-165308.md
+++ b/_posts/2018-04-08-165308.md
@@ -6,5 +6,5 @@ date: 2018-04-08 17:53:08 +0100
 guid: http://adamprocter.micro.blog/2018/04/08/165308.html
 ---
 Adding connections #procterphd spatial UI
-
+[VIDEO LINK](https://www.instagram.com/p/BhUR0Y7jtC0/?taken-by=adamprocter)
 <img src="http://discursive.adamprocter.co.uk/uploads/2018/318a1f8e45.jpg" width="600" height="600" />
